# Adventure-Log

./: .gitignore  README.md  TODO.md  analysis_options.yaml  main.dart  pubspec.yaml
android/app/: build.gradle.kts  google-services.json
backend/http_server_for_db_api/: .env  README.md  database.py  main.py  models.py  pyproject.toml
backend/http_server_for_db_api/models/: tables.py  types.py
backend/http_server_for_db_api/src/: main.py
backend/http_server_for_db_api/src/db/: db.py  models.py  queries.py
backend/http_server_for_db_api/src/db/models/: tables.py
controllers/auth/: require_login_for_page_wrapper.dart
controllers/utils/: constants.dart  responsiveness.dart  validators.dart
data/: firestore_queries.dart
data/models/: review_info.dart  user.dart
frontend/: .flutter-plugins-dependencies  README.md  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_graph.json
frontend/linux/: CMakeLists.txt
frontend/web/: index.html  manifest.json
lib/: constants.dart  main.dart  utils.dart
lib/data/: cloud_storage_funcs.dart  firestore_queries.dart  review_queries.dart  user_queries.dart
lib/pages/: add_review.dart  explore.dart  homepage.dart  page_wrapper.dart  profile.dart  view_reviews.dart
lib/widgets/: display_location.dart  select_page.dart
linux/runner/: my_application.cc
test/: widget_test.dart
views/pages/: add_review.dart  explore.dart  home.dart  login_or_signup.dart  page_wrapper.dart  profile.dart  view_review.dart  view_reviews.dart
views/widgets/: review_card.dart  (+1 more)
windows/: CMakeLists.txt
(+80 files in other folders)
